# accounters

./: .gitignore  Cargo.toml  base.css  build.rs  tailwind.config.js
migrations/: 20231110161954_base.sql
src/: lib.rs  models.rs
src/models/: account.rs  categories.rs  rules.rs  transaction.rs  users.rs
static/: csv.js  styles.css
templates/: account_summary.html  accounts.html  accounts_add_txs.html  base.html  categories_list.html  categories_new.html  classifiers.html  index.html  rules_list.html  rules_new.html  rules_new_success.html
webserver/: Cargo.toml
webserver/src/: lib.rs  main.rs  routes.rs  server.rs  static_values.rs  users.rs
webserver/src/routes/: accounts.rs  categories.rs  static_routes.rs  transactions.rs  ui.rs
webserver/src/routes/api/: accounts.rs  categories.rs  rules.rs  transactions.rs
webserver/src/routes/ui/: account.rs  categories.rs  classifier.rs  rules.rs  transaction.rs
webserver/src/static/: account_txs.html  base.html  categories_new.html  transaction.html
