[package]
name = "accounters"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]

[dependencies]
serde = { version = "1", features = ["derive"] }
chrono = { version = "0.4", features = ["serde"] }
sqlx = { version = "0.7", features = ["runtime-tokio", "sqlite", "chrono"] }
futures = "0.3"
regex = "1"

[dev-dependencies]
tokio = { version = "1", features = ["full"] }

[workspace]
members = [
  "webserver"
]

[workspace.dependencies]
serde = { version = "1", features = ["derive"] }
chrono = { version = "0.4", features = ["serde"]}
sqlx = { version = "0.7", features = ["runtime-tokio", "sqlite", "chrono"] }
